[package]
name = "lobe"
version = "0.1.0"
edition = "2021"
authors = ["Aspenini"]
description = "A fast, cross-platform Brainfuck interpreter written in Rust"
license = "MIT"
repository = "https://github.com/Aspenini/Lobe"
keywords = ["brainfuck", "interpreter", "esolang", "bytecode", "lobe"]
categories = ["command-line-utilities", "parser-implementations", "development-tools::compilers"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "lobe"
path = "src/main.rs"

